<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.zmbdp</groupId>
        <artifactId>frameworkjava</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <groupId>com.zmbdp</groupId>
    <artifactId>zmbdp-common</artifactId>
    <version>1.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <modules>
        <module>zmbdp-common-core</module>
        <module>zmbdp-common-domain</module>
        <module>zmbdp-common-security</module>
        <module>zmbdp-common-redis</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>